force-app/main/default/objects/PlanoTreino__c/PlanoTreino__c.object-meta.xml
<CustomObject>
    <label>Plano de treino</label>
    <nameField>
        <label>Nome de Plano de treino</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planos de treinos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>