force-app/main/default/objects/PlanoTreino__c/fields/ConteudoAplicado__c.field-meta.xml
<CustomField>
    <fullName>ConteudoAplicado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conteúdo Aplicado</label>
    <referenceTo>ConteudoAplicado__c</referenceTo>
    <relationshipLabel>Planos de treinos</relationshipLabel>
    <relationshipName>PlanosTreinos</relationshipName>
    <type>Lookup</type>
</CustomField>