force-app/main/default/objects/PlanoTreino__c/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <label>Objetivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>