force-app/main/default/objects/PlanoTreino__c/fields/TipoTreino__c.field-meta.xml
<CustomField>
    <fullName>TipoTreino__c</fullName>
    <label>Tipo de treino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quadra</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Psicologia</fullName>
            </value>
            <value>
                <fullName>Nutrição</fullName>
            </value>
            <value>
                <fullName>Reunião</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>