force-app/main/default/objects/PlanoTreino__c/fields/Turma__c.field-meta.xml
<CustomField>
    <fullName>Turma__c</fullName>
    <label>Turma</label>
    <referenceTo>Turma__c</referenceTo>
    <relationshipLabel>Planos de treinos</relationshipLabel>
    <relationshipName>PlanosTreinos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>